<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/tvbg"
        android:padding="10dp"
        android:textSize="48sp"
        tools:text="@string/calcText"
        android:textStyle="bold"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_7"/>
        <Button
            android:id="@+id/btnHuit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btnNeuf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_9"/>
        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/division"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnQuatre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/btnCinq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/btnAdditio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/multi"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnUn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btnDeux"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/btnTrois"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_3"/>
        <Button
            android:id="@+id/btnMulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/soustraction"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="2"
            android:text="@string/_0"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/addition"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEgal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/egal"/>


    </LinearLayout>

</LinearLayout>